# GenshinDPScalculator

./: .gitignore  LICENSE  README.md
GenshinDPS/: Buff.cpp  Buff.hpp  CMakeLists.txt  CMakeUserPresets.json  CharacterPreset.cpp  CharacterPreset.hpp  DPSEngine.cpp  DPSEngine.hpp  DataModel.cpp  DataModel.hpp  MainWindow.cpp  MainWindow.hpp  Page_Character.cpp  Page_Character.hpp  Page_DPS.cpp  Page_DPS.hpp  Page_Reaction.cpp  Page_Reaction.hpp  Page_Team.cpp  Page_Team.hpp  ReactionRule.cpp  ReactionRule.hpp  TeamConfig.cpp  TeamConfig.hpp  main.cpp
